src/snapshots/avdl__reader__tests__detect_fixed_non_integer_pattern.snap
---
source: src/reader.rs
expression: format_syntax_error(&refined)
---
message: line 2:15 fixed type requires an integer size -- use `fixed MD5(<integer>)`, e.g., `fixed MD5(16)`
label: `abc` is not an integer
