src/snapshots/avdl__reader__tests__detect_missing_name_protocol.snap
---
source: src/reader.rs
expression: format_syntax_error(&refined)
---
message: line 1:9 expected name after `protocol`, found `{`
label: expected protocol name before `{`
help: add a name, e.g., `protocol MyProtocol { ... }`
