src/snapshots/avdl__reader__tests__doc_annotation_on_field_variable_is_rejected.snap
---
source: src/reader.rs
expression: render_error(&err)
---
  x parse `<input>`
  `-> Can't set reserved property: doc
   ,-[<input>:4:35]
 3 |             protocol P {
 4 |                 record R { string @doc("field doc") name; }
   :                                   ^^^^^^^^|^^^^^^^^
   :                                           `-- Can't set reserved property: doc
 5 |             }
   `----
