src/snapshots/avdl__reader__tests__doc_annotation_on_message_is_rejected.snap
---
source: src/reader.rs
expression: render_error(&err)
---
  x parse `<input>`
  `-> Can't set reserved property: doc
   ,-[<input>:4:17]
 3 |             protocol P {
 4 |                 @doc("message doc") void ping();
   :                 |
   :                 `-- Can't set reserved property: doc
 5 |             }
   `----
