src/snapshots/avdl__reader__tests__doc_annotation_on_protocol_is_rejected.snap
---
source: src/reader.rs
expression: render_error(&err)
---
  x parse `<input>`
  `-> Can't set reserved property: doc
   ,-[<input>:3:13]
 2 |             @namespace("test")
 3 |             @doc("Protocol doc via annotation")
   :             |
   :             `-- Can't set reserved property: doc
 4 |             protocol P {
   `----
