src/snapshots/avdl__reader__tests__duplicate_named_type_in_union_is_rejected.snap
---
source: src/reader.rs
expression: err
---
Error {
    msg: "parse `<input>`",
    source: ParseDiagnostic {
        src: NamedSource {
            name: "<input>",
            source: "<redacted>",
            language: None,
        ,
        span: SourceSpan {
            offset: SourceOffset(
                141,
            ),
            length: 3,
        },
        message: "Duplicate in union: Bar",
    },
}
