src/snapshots/avdl__reader__tests__duplicate_null_in_union_is_rejected.snap
---
source: src/reader.rs
expression: render_error(&err)
---
  x parse `<input>`
  `-> Duplicate in union: null
   ,-[<input>:4:43]
 3 |                 record Foo {
 4 |                     union { null, string, null } field1;
   :                                           ^^|^
   :                                             `-- Duplicate in union: null
 5 |                 }
   `----
